# LinuxAppDevelCourse

02_BuildReq/: main.c
02_TerminalProject/: Show.c  makefile
03_Multifile/: fun.c  prog.c
04_Multifile/: makefile
04_Text/: randomize.sh
05_Debugging/: main.c  makefile  range.c  range.h
05_Debugging/tests/: test_1.py  test_2.py
06_TracingFencing/: main.c  makefile  preload_test.sh  protect.c  strace_tests.sh  test_file
07_Environmental/: CMakeLists.txt  main.c  test.sh
07_Environmental/getline_cmd/: CMakeLists.txt  getline_cmd.c
07_Environmental/readline_cmd/: CMakeLists.txt  getline_cmd.c  getline_cmd.h
08_Regexps/: CMakeLists.txt  main.c  test.sh
09_Testing/: CMakeLists.txt  README.md  buf.c  buf.h
09_Testing/tests/: test1.c  test2.c  test3.c  test4.c  test5.c
10_I18n/: CMakeLists.txt  guess_num.c
12_PatchInstall/: CMakeLists.txt  README.md  guess_num.c
12_PatchInstall/man/: guess_num.1
12_PatchInstall/translations/: ru.po
